feature: explore view
