# Alpinity/Alpinity.Api/Controllers/MapController.cs
@@ -1,6 +1,7 @@
 using System.Net.Mime;
 using Alpinity.Application.Interfaces;
 using Alpinity.Application.UseCases.Map.Commands.Explore;
+using Alpinity.Application.UseCases.Map.Dtos;
 using MediatR;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
@@ -16,7 +17,7 @@ public class MapController(IMediator mediator, IAuthenticationContext authentica
     [ProducesResponseType(StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status401Unauthorized)]
     [Produces(MediaTypeNames.Application.Json)]
-    public async Task<IActionResult> Explore(double? latitude, double? longitude, double? radius, CancellationToken cancellationToken)
+    public async Task<ActionResult<ICollection<ExploreDto>>> Explore(double? latitude, double? longitude, double? radius, CancellationToken cancellationToken)
     {
         var command = new ExploreCommand
         {
